# paxwords

./: .rustfmt.toml  Cargo.toml  README.md  deny.toml  docker-compose.yml  paxwords-demo.Dockerfile
.github/: dependabot.yml
.github/workflows/: ci.yml
paxwords-core/: Cargo.toml
paxwords-core-fuzz/: Cargo.toml
paxwords-core-fuzz/src/: main.rs
paxwords-core/src/: lib.rs
paxwords-core/src/crypto/: chacha.rs  keyring.rs  master_password.rs  mod.rs
paxwords-core/src/entries/: entries.rs  entry_encrypter.rs  in_memory_entry.rs  mod.rs  storage.rs
paxwords-core/src/sync/: apply.rs  compare.rs  mod.rs  retrieve.rs  state.rs
paxwords-core/src/types/: entry.rs  metadata.rs  mod.rs  order.rs  secret.rs
paxwords-core/src/utils/: event_loop.rs  mod.rs  value_notify.rs
paxwords-demo/: Cargo.toml
paxwords-demo-framework/: Cargo.toml
paxwords-demo-framework/src/: lib.rs
paxwords-demo/src/: main.rs
paxwords-sync/: Cargo.toml
paxwords-sync/src/: bincodec.rs  lib.rs  local_entries.rs
paxwords-sync/src/finder/: mod.rs  network.rs
paxwords-sync/src/sync/: differences.rs  mod.rs  network.rs  providers.rs
