[workspace]
resolver = "3"
members = [ "paxwords-core" , "paxwords-core-fuzz", "paxwords-demo", "paxwords-demo-framework", "paxwords-sync"]

[workspace.dependencies]
anyhow = "1.0.100"
assert_matches = "1.5.0"
async-bincode = "0.8.0"
async-trait = "0.1.89"
bincode = "2.0.1"
chacha20poly1305 = "0.10.1"
clap = "4.5.51"
futures = "0.3.31"
hex = "0.4.3"
hex-literal = "1.0.0"
hkdf = "0.12.4"
keyring = "3.6.0"
libp2p = "0.56.0"
memsecurity = "3.5.2"
pbkdf2 = "0.12.2"
parking_lot = "0.12.5"
rand = "0.9.2"
rand_core = "0.9"
secrecy = "0.10.3"
serde = "1.0.228"
serde-big-array = "0.5.1"
sha2 = "0.10.9"
subtle = "2.6.1"
tempdir = "0.3.7"
thiserror = "2.0.16"
thiserror-context = "0.1.2"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
x25519-dalek = "3.0.0-pre.1"
zeroize = "1.8.1"
