[package]
authors = [ "Svyatoslav Nikolsky <svyatonik@gmail.com>" ]
description = "paxwords password manager demo app"
license = "GPL-3.0-or-later"
name = "paxwords-demo"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "paxwords-demo"
test = false
bench = false

[dependencies]
clap = { workspace = true, features = [ "derive" ] }
futures.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }

paxwords-core = { path = "../paxwords-core" }
paxwords-demo-framework = { path = "../paxwords-demo-framework" }
paxwords-sync = { path = "../paxwords-sync" }
